# TasteBud

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/project-philosophy/: SKILL.md
.claude/skills/project-style/: SKILL.md
.claude/skills/requirement-develop/: SKILL.md
backend/: pyproject.toml
backend/src/analyzer/: base.py
backend/src/analyzer/clip/: analyzer.py
backend/src/analyzer/comment/: analyzer.py  models.py  prompts.py  window.py
backend/src/analyzer/source_tag/: analyzer.py
backend/src/analyzer/vlm/: analyzer.py
backend/src/collector/: base.py  storage.py
backend/src/collector/ehentai/: collector.py
backend/src/core/: comment.py  config.py  exceptions.py  logging.py
backend/src/engine/: feedback.py  preference.py  schema.py  scorer.py  sieve.py
backend/src/notifier/: base.py  local.py
backend/src/pipeline/: __main__.py  base.py  config.py  main.py  models.py  runner.py
backend/src/plugin/bilibili/: auth.py  client.py  collector.py  cursor.py  login.py  models.py  plugin.py  template.py
backend/tests/: test_analysis_window.py  test_analyzer.py  test_bilibili_client.py  test_bilibili_cursor.py  test_comment_analyzer.py  test_feedback.py  test_notifier.py  test_pipeline_config.py  test_scorer.py  test_sieve.py  test_storage_sieve.py
docs/requirements/: index.md
docs/requirements/REQ-001-core-value-chain/: design.md  (+1 more)
frontend/src/: App.tsx
pipelines/: bilibili-search.yaml  bilibili-user.yaml  bilibili-video.yaml  bilibili.yaml
requirements/: index.md
requirements/REQ-003-bilibili-search/: requirement.md
requirements/REQ-004-batch-analysis/: requirement.md
requirements/REQ-005-rate-limit-429/: requirement.md
scripts/: browse.py  build.bat  collect_test.py  download_gallery.py  feedback.py  format.bat  install.bat  lint.bat  lint.py  main.py  pipeline.bat  run.bat  test.bat  test.py
(+7 files in other folders)
