[project]
name = "tastebud"
version = "0.1.0"
description = "AI-driven content curator that scouts, analyzes, and ranks digital content based on your unique flavor profile."
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.3",
    "qrcode>=8.0",
]

[project.optional-dependencies]
clip = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
tastebud-pipeline = "pipeline.main:main"
tastebud-bilibili-login = "plugin.bilibili.login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/collector",
    "src/analyzer",
    "src/engine",
    "src/notifier",
    "src/pipeline",
    "src/plugin",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["core", "collector", "analyzer", "engine", "notifier", "pipeline", "plugin"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
